<resources>
    <string name="app_name">login_module</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="type_slope">边坡</string>
    <string name="type_weater">三防</string>
    <string name="type_worker">巡查员</string>
    <string name="type_house">危房</string>
    <string name="type_dx">地陷</string>
    <string name="type_gd">工地</string>
    <string name="type_hd">河道</string>
    <string name="typeall">业务分类</string>
    <string name="appName">云城建</string>
    <string name="appnote">深圳市光明区凤凰街道城市建设办公室</string>
    <string name="typegaverment">管理职能</string>
    <string name="type_zj">住房建设</string>
    <string name="type_hs">环境水务</string>
    <string name="type_jt">交通运输</string>
    <string name="type_gt">规划土地</string>
    <string name="permission_storage">存储空间</string>
    <string name="permission_location">位置信息</string>
    <string name="permission_camera">拍照权限</string>
    <string name="permission_dialog_title">开启%s</string>
    <string name="permission_dialog_msg">为了您能正常使用%s，需要以下权限</string>
    <string name="permission_title">请允许获取%s</string>
    <string name="permission_denied">我们需要获取%1$s, 否则您将无法正常使用%2$s</string>
    <string name="permission_denied_with_naac">"由于%1$s无法获取%2$s, 不能正常运行, 请开启权限后再使用。\n\n设置路径: 应用管理->%3$s->权限"</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_ensure">确定</string>
    <string name="permission_reject">拒绝</string>
    <string name="permission_btn_next">下一步</string>
    <string name="permission_go_to_setting">去设置</string>
    <string name="gt_content">主要职责：\n
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（一）负责贯彻执行查处规划违法和土地违法的有关法律、法规、规章和制度，宣传有关政策法规，组织开展行政执法培训。\n
　　（二）负责规划土地执法监察和查处工作，组织实施规划土地监察政策和相关疏导政策。\n
　　（三）负责受理规划违法行为和土地违法行为的投诉、举报，并及时组织调查、处理及反馈回复。\n
　　（四）负责对公民、法人和其他组织遵守执行有关城市规划、土地管理法律、法规、规章的情况进行日常巡查和土地卫片执法工作，并组织指挥开展联合执法、交叉检查。\n
　　（五）负责对水、电、气、建材、建筑设计和施工企业在违法建筑建设中的有关行为进行制止并协助处罚。\n
　　（六）负责规划土地违法案件的调查取证、认定和作出行政处罚决定。\n
　　（七）负责协调和执行辖区内违法用地清理和违法建筑物：构筑物、设施的强制拆除和城际边界相关调查及执法工作。\n
　　（八）负责“一户一栋’’建设和相关临时建筑（用地）的审批和监管。\n
　　（九）负责农村城市化历史遗留问题处理的统一组织协调，开展分类审查，作出处理决定并核发处理文书及历史遗留土地建筑物确权工作。\n
　　（十）负责对各查违共同责任单位进行检查和考核。\n
　　（十一）承办新区党工委、管委会和上级业务部门交办的其他规划土地监察事项。\n

机构设置：\n
机构名称：综合（监督）科\n
机构职责：\n
1、协助大队领导对政务、业务等有关工作进行综合协调和检查督促。\n
2、负责文秘、机要档案、文电处理、保密、印鉴的管理。\n
3、负责政务活动安排、会议组织、综合性材料的起草、信息宣传、文字材料打印和复印。\n
4、负责人事、财务报帐、固定资产管理。\n
5、负责公务接待、交通工具等后勤事务的管理。\n
6、负责制定查处违法用地和违法建筑共同责任考核方案，组织实施对新区查违办各成员单位的考核。\n
7、负责督办上级机关布置的重点工作任务。\n
8、负责对驻派办事处规划土地监察中队工作进行抽查督查。\n
9、承办大队领导交办的其它工作。\n

机构名称：法制与案件审理科\n
机构职责：\n
1、组织实施规划土地监察政策和相关疏导政策，制定具体指导意见和管理规定。\n
2、负责对规划土地违法案件进行法制审核和指导。\n
3、统筹重大、疑难案件处理工作。\n
4、负责对执法程序和方案进行审查，组织案件审理和执法监督。\n
5、负责组织行政处罚听证，配合上级参与行政复议、行政诉讼案件的应诉处理工作。\n
6、负责执法业务的督查、检查和考核工作。\n
7、负责开展规划土地监察行政执法培训、法制宣传和普法等工作。\n
8、负责临时建筑（用地）审批等查违疏导政策的拟定与实施工作。\n
9、承办本局领导交办的其它工作。\n

机构名称：遗留违建处理科（卫片执法科）\n
机构职责：\n
1、负责原村民非商品住宅建设的审批及审批后的监管工作。\n
2、拟定新区农村城市化历史遗留建筑和相关土地确权的实施细则和程序。\n
3、负责历史遗留建筑的信息收集工作。\n
4、负责农村城市化历史遗留问题处理的统一组织协调，开展分类审查，作出处理决定并核发处理文书及开展历史遗留土地建筑物确权工作。\n
5、负责开展国家、省、市卫星遥感监测专项土地执法工作。\n
6、承办局领导交办的其他工作。\n

机构名称：一、二、三、四、五、六中队\n
机构职责：\n
1、负责违法用地、违法建筑案件的调查取证、认定和作出行政处罚决定。\n
2、负责行政执法文书的制作、编号和发放，做好行政执法案件材料的立卷和管理工作。\n
3、负责发没款收缴工作、先行登记保存物品和暂扣物品的管理。\n
4、负责制定规划土地监察年度计划及行动方案，并组织实施。\n
5、负责制止辖区内违法用地和违法建筑行为，并对水、电、气、建材、建筑设计和施工企业在违法建筑建设中的有关行为进行制止并协助处罚。\n
6、协调和执行辖区违法用地清理和违法建筑物、构筑物、设施的强制拆除。\n
7、负责受理辖区内规划违法行为和土地违法行为的投诉、举报，并及时组织调查、处理及反馈回复。\n
8、承办局领导交办的其他工作。\n
一中队负责光明办事处；二中队负责新湖办事处；三中队负责公明办事处；四中队负责马田办事处；五中队负责凤凰办事处；六中队负责玉塘办事处。派驻中队实行由局和办事处双重管理体制，列入办事处部门序列，但不计入机构个数。\n
</string>
    <string name="zj_content">主要职责：\n
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（一）负责贯彻执行上级有关城市建设、工程建设、建筑业、建材业、燃气业、物业管理业、房屋使用安全及住房制度改革、保障性住房建设、城市更新、民防、建筑废弃物受纳等法律法规和政策方针，结合实际制定具体实施办法，经批准后组织实施。\n
　　（二）负责推进住房制度改革和住房保障工作；负责保障性住房和政策性住房的规划、建设、租售、维修和监管。\n
　　（三）负责建设行业和建筑市场的监督管理。\n
　　（四）负责对建设工程质量、建筑施工安全生产和文明施工的监督管理；负责工程的施工许可管理；组织或参与工程质量、安全事故的调查处理；负责房屋修缮、改造和使用安全鉴定监管；负责房屋建设工程及其造成的建筑边坡监管工作；负责建设工程竣工验收备案管理；负责对工程质量监督、施工安全监督和工程质量检测机构进行业务指导和监督管理；负责城市建设工程档案管理。\n
　　（五）负责推进建筑节能减排工作；组织建筑新技术、新工艺、新设备、新材料的示范、推广和应用。\n
　　（六）负责物业管理的指导和监管；承担物业专项维修基金的监管工作。\n
　　（七）负责燃气行业和燃气安全的监督管理以及天然气管道的保护工作。\n
　　（八）负责人民防空工程规划和建设管理工作；协调、指导防震抗震工作。\n
　　（九）负责城市更新的规划、组织、实施、监督、管理、协调工作。\n
　　（十）负责建筑废弃物固定受纳场（不含已移交城管部门的受纳场）的管理，依法核发建筑废弃物临时受纳场地证。\n
　　（十一）负责查处工程建设、建筑业、燃气业、物业管理、保障性（政策性）住房、房改、民防的违法违规行为。\n
　　（十二）承办新区党工委、管委会和上级主管部门交办的其他工作。\n

机构设置：\n
机构名称：办公室\n
机构职责：\n
1、协助局领导对政务、业务等有关工作进行综合协调和检查督促。\n
2、负责文秘、机要档案、文电处理、保密、印鉴的管理。\n
3、负责重要会议组织、综合性材料的起草、信息宣传、文字材料打印和复印。\n
4、负责人事、财务报帐、固定资产管理。\n
5、负责公务接待、交通工具等后勤事务的管理。\n
6、承办本局领导交办的其它工作。\n

机构名称：住房改革与保障科\n
机构职责：\n
1、负责贯彻执行上级关于有关住房保障和住房制度改革的法律、法规和政策，负责制定新区住房保障和住房制度改革的相关政策及实施方案并组织实施；负责编制新区住房保障的中长期发展规划和年度计划，并做好落实、协调和监督工作。\n
2、负责组织、指导、协调和监督保障性（政策性）住房的分配、出售、出租、补贴发放等工作；负责组织、指导、审核和监督新区房改售房、住房分配货币化改革等住房制度改革工作。\n
3、负责保障性（政策性）住房和政府物业资产的产权和实物接收，并组织、指导、协调和监督产权产籍、档案管理、物业管理等住房管理工作。\n
4.、负责牵头机关事业单位住房公积金、房改住房补贴工作，负责政策宣传和解释；负责政策性住房信息认定和政策性住房信息数据管理工作。\n
5、负责住宅产业化的管理工作。\n
6、承办本局领导交办的其它工作。\n

机构名称：建筑管理科（民防委员会办公室）\n
机构职责：\n
1、负责贯彻执行上级有关工程建设、建筑业和建材管理的方针、政策和法规，依法对建筑市场进行监督管理，规范建筑市场各方主体行为。\n
2、负责墙体材料改革专项资金和散装水泥专项基金的征收工作；负责城市建设工程档案管理。\n
3、负责规范、监督建设工程招投标各方主体行为。\n
4、负责推进建筑节能减排、绿色建筑和建筑工业化工作。\n
5、负责地下综合管廊的统一规划、设计、建设和维护管理。\n
6、负责民防管理，会同军事机关确定重要经济目标和重点防护单位，依法对城市和经济目标民防建设进行监督检查。\n
7、负责按规定对人民防空国有资产实施专业管理，对民防工程和专业设备进行监督检查，并指导管理与维护工作。\n
8、负责组织制订人民防空相关规划及保障计划，组织实施人民防空通信、警报建设和维护管理；负责防空、防震应急等专业队伍的组建和训练，会同有关部门不定期举行防空、防震应急等演练。\n
9、负责人防工程（结合民用建筑建防空地下室）的报建、审查、监督等项目管理工作。\n
10、负责人民防空及抗震各项法规的宣传、咨询和行政执法工作。\n
11、负责地震相关工作，组织实施室外应急避难场所建设。\n
12、承办本局领导交办的其他工作。\n

机构名称：工程质量安全科（地面坍塌防治办公室）\n
机构职责：\n
1、负责工程报建和施工许可管理，按权限办理建筑工程施工许可。\n
2、组织或参与建设工程质量、安全事故的调查处理，依法实施有关事故救援工作。\n
3、负责对工程质量监督、施工安全监督和工程质量检测机构进行业务指导和监督管理。\n
4、配合有关部门对建筑工程场地执行消防、职业卫生等情况进行监督检查。\n
5、负责地面坍塌排查和整治工作，组织制定地面坍塌事故防治工作方案并督促检查方案落实情况的实施；负责地面坍塌事故应急处置的综合协调工作，落实地面坍塌处置工作责任。\n
6、承办本局领导交办的其他工作\n

机构名称：房屋安全与物业监管科\n
机构职责：\n
1、负责房屋安全鉴定管理。\n
2、负责指导和监督住房专项维修资金管理工作。\n
3、负责贯彻落实上级关于物业管理及物业维修资金方面的法律、法规和政策，依法对物业服务市场、行为及物业管理活动进行监督管理。\n
4、负责物业服务企业资质等级核准初审；负责组织物业服务行业考评工作；负责指导物业管理服务项目的招投标活动。\n
5、负责指导、规范各物业小区业主大会、业主委员会的成立、选举及日常运作；负责物业管理纠纷的调解以及信访案件的处理回复。\n
6、负责房屋物业专项维修资金（公用设施专用资金）的监管工作，对上述资金的收取、存储、使用和查询进行管理，接受和处理相关投诉。\n
7、负责住宅区停车场内新能源汽车充电设施的监管。\n
8、承办本局领导交办的其他工作。\n

机构名称：市政设施管理科\n
机构职责：\n
1、负责制定燃气行业发展规划与计划，并组织实施；承担燃气行业和燃气安全的监管职责。\n
2、负责组织协调、监督管理燃气项目建设。\n
3、负责瓶装燃气供应站（点）的设立审批或备案管理。\n
4、负责组织或参与燃气事故的调查处理；负责开展燃气安全宣传教育活动。\n
5、负责天然气管道保护工作。\n
6、负责建筑废弃物受纳场（不含已移交城管部门的受纳场）建设和管理，监督受纳场所受纳建筑废弃物运营及遵守相关法律法规的执行情况。\n
7、负责依法核发建筑废弃物临时受纳场地许可证。\n
8、负责建筑废弃物运输车辆准运管理。\n
9、承办本局领导交办的其他工作。\n

机构名称：城市更新科\n
机构职责：\n
1、负责贯彻执行上级有关城市更新（对旧工业区、旧商业区、旧住宅区、城中村及旧屋村等特定城市建成区进行改造）的方针政策，结合实际制定相应的配套实施办法。\n
2、负责统筹协调和跟踪服务城市更新活动，完善城市功能和配套设施，推动产业结构调整，优化人居环境，加快推动城市建设的进程。\n
3、负责按照市、区城市发展的战略部署和产业规划，制定新区城市更新中长期规划，统筹部署城市更新工作。\n
4、负责统筹协调城市更新单元计划、专项规划的申报、审批工作；负责城市更新项目实施主体确认。\n
5、负责受理城市更新项目建设用地申请，出具城市更新项目建设项目用地预审意见，核发建设用地批准文件和建设用地规划许可证。\n
6、负责城市更新项目核算地价、签订国有土地使用权出让合同，并对合同落实情况进行验收和监督管理。\n
7、负责城市更新项目建设用地工程项目的规划管理工作；核发城市更新项目建设工程规划许可证；监督、指导城市更新项目建设工程测绘工作；办理建设工程规划验收，以及其他相关的规划管理工作。\n
8、负责涉及城市更新项目的行政确认、信息公开等相关事项。\n
9、承办本局领导交办的其他工作。\n

机构名称：城市建设行政执法大队\n
机构职责：\n
1、负责贯彻执行建设、建筑、民防、物业、住宅、燃气行政执法法律、法规、规章和政策，研究制定执法工作的规范性文件、执法工作规划和年度计划，并组织实施。\n
2、负责对建设、建筑、民防、物业、住宅、燃气行政执法工作进行协调、指导和监督。\n
3、负责指导、监督派驻办事处中队开展建设、建筑、民防、物业、住宅、燃气等方面执法工作，并组织、协调跨部门、跨区域的联合执法行动，查处重大或跨区域的违法案件。\n
4、承办本局领导和上级有关部门交办的其他工作。\n

机构名称：质量安全监督站\n
机构职责：\n
一、工作职责\n
受建设行政主管部门委托，负责对光明新区住房和建设局施工许可并办理质量安全监督登记手续的工程项目进行质量安全监督抽查工作。\n
（一）安全监督职责\n
依据有关法律法规，对房屋建筑和市政基础设施工程的建设、勘察、设计、施工、监理等单位及人员履行安全生产职责，执行法律、法规、规章、制度及工程建设强制性标准等情况实施抽查并对违法违规行为进行处理。根据《房屋建筑和市政基础设施工程施工安全监督规定（建质〔2014〕153号）》第八条，施工安全监督主要包括以下内容：\n
1、抽查工程建设责任主体履行安全生产职责情况；\n
2、抽查工程建设责任主体执行法律、法规、规章、制度及工程建设强制性标准情况；\n
3、抽查建筑施工安全生产标准化开展情况；\n
4、组织或参与工程项目施工安全事故的调查处理；\n
5、依法对工程建设责任主体违法违规行为实施行政处罚；\n
6、依法处理与工程项目施工安全相关的投诉、举报。\n
（二）质量监督职责\n
    依据有关法律法规和工程建设强制性标准，对工程实体质量和工程建设、勘察、设计、施工、监理单位和质量检测等单位的工程质量行为实施监督。工程实体质量监督，是指主管部门对涉及工程主体结构安全、主要使用功能的工程实体质量情况实施监督。工程质量行为监督，是指主管部门对工程质量责任主体和质量检测等单位履行法定质量责任和义务的情况实施监督。 根据《房屋建筑和市政基础设施工程质量监督管理规定》（建设部令2010年第5号）第五条，工程质量监督主要包括以下内容：\n
1、执行法律法规和工程建设强制性标准的情况；\n
2、抽查涉及工程主体结构安全和主要使用功能的工程实体质量；\n
3、抽查工程质量责任主体和质量检测等单位的工程质量行为；\n
4、抽查主要建筑材料、建筑构配件的质量；\n
5、对工程竣工验收进行监督；\n
6、组织或者参与工程质量事故的调查处理；\n
7、定期对本地区工程质量状况进行统计分析；\n
8、依法对违法违规行为实施处罚。\n

机构名称：住宅事务管理中心\n
机构职责：\n
1、负责贯彻执行国家和省、市有关房屋公用设施专用基金管理的法规政策，结合新区实际，制定有关政策和措施，经批准后组织实施。\n
2、负责新区政府物业资产及公产房、经组房、代管侨房的产权和实物接收，申办产权、注销、变更产权和档案管理等方面的产权产籍管理工作，负责制订处置、改造方案并监督实施。\n
3、负责住房基金的收缴和使用的监督管理。\n
4、依法受理本辖区内房屋开发建设项目公用设施专用基金的申报缴交。\n
5、负责政策性住房及配套设施的分配和租售管理。\n
6、负责住宅产业化的管理工作。\n
7、对政策性住房及房改方面违规行为进行查处。\n
8、承办上级交办的其他工作。\n

机构名称：城市更新事务中心\n
机构职责：\n
（一）协助相关部门完成更新单元计划、规划审批和实施主体确认工作，组织协调城市更新项目实施。\n
（二）参与城市更新项目用地的移交入库工作。\n
（三）负责编制由政府主导的城市更新项目的融资、预算、拆迁补偿安置等工作方案，并组织实施；协助相关部门审查城市更新项目的拆迁计划；协助相关部门开展城市更新项目房屋预售初审。\n
（四）负责制定城市更新项目资金计划及市、区政府对辖区内城市更新项目所投入资金的使用监督和管理。\n
（五）负责城市更新工作的宣传、信访维稳等服务工作。\n
（六）承办主管部门交办的其他事项。\n
</string>
</resources>