<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="slope.zxy.com.login_module.ManagerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@mipmap/logotop"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mangerName"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/type_gt"
            android:focusable="true"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/color_back"
            android:layout_gravity="center_horizontal"
            />
        <ScrollView
        android:id="@+id/contentScro"
        android:layout_width="match_parent"
        android:background="@drawable/bt_main_scorll"
            android:layout_height="0dp"
            android:layout_weight="10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center"
        >
        <TextView
        android:id="@+id/news_item_content_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2dp"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/gt_content"
        android:textColor="@color/tv_gray_deep" />

        </ScrollView>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/typeall"
        android:focusable="true"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/color_back"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typeSlope"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="3dp"
            android:background="@drawable/item_text_view_bg2"
            android:clickable="true"
            android:text="@string/type_slope"
            android:textSize="17sp"
            android:onClick="toMapMain"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typeSf"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="3dp"
            android:background="@drawable/item_text_view_bg2"
            android:clickable="true"
            android:onClick="toMapMain"
            android:text="@string/type_weater"
            android:textSize="17sp"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typeHouse"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="3dp"
            android:background="@drawable/item_text_view_bg2"
            android:clickable="true"
            android:text="@string/type_house"
            android:textSize="17sp"
            android:onClick="toMapMain"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typeDx"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="3dp"
            android:background="@drawable/item_text_view_bg2"
            android:clickable="true"
            android:text="@string/type_dx"
            android:onClick="toMapMain"
            android:focusable="true"
            android:textSize="17sp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typegd"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="3dp"
            android:background="@drawable/item_text_view_bg2"
            android:clickable="true"
            android:text="@string/type_gd"
            android:textSize="17sp"
            android:focusable="true"
            android:onClick="toMapMain"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typehd"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="3dp"
            android:background="@drawable/item_text_view_bg2"
            android:clickable="true"
            android:text="@string/type_hd"
            android:textSize="17sp"
            android:onClick="toMapMain"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/appnote"
            android:focusable="true"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_marginBottom="@dimen/dp_20"
            android:textColor="@color/color_back"
            android:layout_gravity="center_horizontal|bottom"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
