<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:id="@+id/pop_layout"
    android:background="#bf818181"
    android:paddingBottom="@dimen/dp_20"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:tag="1"
        android:onClick="selectType"
        android:text="@string/type_zj"
        android:background="@drawable/buttonbg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:tag="2"
        android:onClick="selectType"
        android:text="@string/type_hs"
        android:background="@drawable/buttonbg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:onClick="selectType"
        android:tag="3"
        android:text="@string/type_jt"
        android:background="@drawable/buttonbg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:tag="4"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:onClick="selectType"
        android:text="@string/type_gt"
        android:background="@drawable/buttonbg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"/>
</LinearLayout>