<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="slope.zxy.com.login_module.MainDoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:layout_marginTop="@dimen/dp_10"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="32dp"-->
            <!--android:focusable="true"-->
            <!--android:drawableLeft="@mipmap/logotop"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/color_back"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--/>-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@mipmap/logotop"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            />

        <cn.bingoogolapple.bgabanner.BGABanner
            android:id="@+id/poitBanner"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_height="200dp"
            app:banner_pageChangeDuration="1000"
            app:banner_pointAutoPlayInterval="3000"
            app:banner_pointAutoPlayAble="true"
            app:banner_transitionEffect="defaultEffect"
            app:banner_placeholderDrawable="@mipmap/webwxgetmsgimg5"
            android:layout_gravity="center_horizontal"
            app:banner_indicatorGravity="bottom|center_horizontal"
            app:banner_pointContainerBackground="@android:color/transparent"
            app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
            app:banner_pointContainerLeftRightPadding="10dp"
            app:banner_pointTopBottomMargin="5dp"
            app:banner_pointLeftRightMargin="3dp"/>
            <!--<ImageView-->
                <!--android:layout_width="@dimen/dp_100"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="top"-->
                <!--android:layout_marginLeft="@dimen/dp_30"-->
                <!--android:src="@mipmap/logob"-->
                <!--/>-->


        <!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="32dp"-->
            <!--android:layout_marginTop="@dimen/dp_5"-->
            <!--android:text="@string/typegaverment"-->
            <!--android:focusable="true"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/color_back"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--/>-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/dp_15">

        <ScrollView
            android:id="@+id/contentScro"
            android:layout_width="@dimen/dp_300"
            android:background="@drawable/bt_main_scorll"
            android:layout_height="@dimen/dp_170"
            android:layout_marginTop="@dimen/dp_10"
           android:layout_marginLeft="@dimen/dp_20"
            android:layout_gravity="left"
           >
            <TextView
                android:id="@+id/news_item_content_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/gt_content"
                android:textColor="@color/tv_gray_deep" />

        </ScrollView>


    <LinearLayout
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_170"
        android:background="@drawable/bt_main_state"
        android:gravity="center"
        android:orientation="vertical">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_gt"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="true"
            android:background="@color/color_back"
            android:text="@string/type_gt"
            android:onClick="msgType"
            android:focusable="true"
            android:textColor="@color/c_gray_6"
            android:textStyle="bold"
            android:gravity="center"
           />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_jt"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="true"
            android:onClick="msgType"
            android:text="@string/type_jt"
            android:textColor="@color/c_gray_6"
            android:textStyle="bold"
            android:focusable="true"
            android:gravity="center"
           />


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_zj"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="true"
            android:text="@string/type_zj"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/c_gray_6"
            android:textStyle="bold"
            android:onClick="msgType"
          />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_hs"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="true"
            android:text="@string/type_hs"
            android:textColor="@color/c_gray_6"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dp_20"
            android:focusable="true"
            android:onClick="msgType"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/typeall"
            android:focusable="true"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/color_back"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typeSlope"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/item_text_view_bg"
                android:clickable="true"
                android:text="@string/type_slope"
                android:onClick="toMapMain"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typeSf"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/item_text_view_bg"
                android:clickable="true"
                android:onClick="toMapMain"
                android:text="@string/type_weater"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>


            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typeHouse"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/item_text_view_bg"
                android:clickable="true"
                android:text="@string/type_house"
                android:onClick="toMapMain"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typeDx"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/item_text_view_bg"
                android:clickable="true"
                android:text="@string/type_dx"
                android:onClick="toMapMain"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typegd"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/item_text_view_bg"
                android:clickable="true"
                android:text="@string/type_gd"
                android:focusable="true"
                android:onClick="toMapMain"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />


            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/typehd"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/item_text_view_bg"
                android:clickable="true"
                android:text="@string/type_hd"
                android:onClick="toMapMain"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

        </LinearLayout>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appnote"
        android:focusable="true"
        android:gravity="center"
        android:textSize="13sp"
        android:layout_marginTop="@dimen/dp_50"
        android:textColor="@color/color_back"
        android:layout_gravity="center_horizontal|bottom"
        />


    </LinearLayout>



    <!-- 欢迎-->
    <!--<ImageView-->
        <!--android:id="@+id/splash_img1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@mipmap/wellcom2"-->
        <!--android:scaleType="fitXY"-->
        <!--/>-->

</android.support.design.widget.CoordinatorLayout>
